<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Book Manager</string>

    <!-- Activity 1 -->
    <string name="hint_title">Enter Book Title</string>
    <string name="hint_author">Enter Author Name</string>
    <string name="hint_year">Enter Publication Year</string>
    <string name="btn_next">Next</string>
    <string name="error_missing_fields">Please fill all the fields</string>

    <!-- Activity 2 -->
    <string name="book_details">Book Details</string>
    <string name="book_title_label">Title: </string>
    <string name="book_author_label">Author: </string>
    <string name="book_year_label">Year: </string>
    <string name="book_photo">Book Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="bda_title">Title</string>
    <string name="bda_author">Author</string>
    <string name="bda_year">Year Published</string>

    <!-- Activity 3 -->
    <string name="common_intents">Common Intents</string>
    <string name="share_book_label">Share This Book</string>
    <string name="share_book">Share</string>
    <string name="search_label">Search the Web</string>
    <string name="search_hint">Enter search query</string>
    <string name="search_web">Search Book</string>
    <string name="cia_title">Title</string>
    <string name="cia_author">Author</string>
    <string name="cia_year">Year Published</string>
    <string name="book_recommendation">Book Recommendation</string>
    <string name="share_book_via">Share book via</string>
    <string name="check_out_this_book">Check out this book</string>
    <string name="by">by</string>
</resources>